<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.tonicamara.wordleunlimited.StatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/statsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/stats_activity_header"
            android:textColor="@color/whiteText"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="1dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/played_games"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/gamesPlayedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                tools:text="500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/games_won"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/timesWonView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                tools:text="200" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_tries"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/averageTriesView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                tools:text="3.4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/times_given_up"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/timesGivenUpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                tools:text="87" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginVertical="30dp"
            android:layout_height="1dp"
            android:background="@color/green" />

        <Button
            android:id="@+id/resetStatsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REINICIAR ESTADISTICAS"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp"
            style="@style/OrangeButton"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>